@@ -45,6 +45,8 @@
 \b\.#
 \.bak$
 \.tmp$
+\.swp$
+\.swo$
 \.#
 \.rej$
 \..*\.sw.?$
